--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ header.sticky {
 }
 
 .logo {
-    background-image: url(../images/site-logo.png);
+    background-image: url(../images/logo.png);
     background-position: left;
     background-size: contain;
     background-repeat: no-repeat;
