--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,8 +539,14 @@ p.first-text {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 300px;
+    height: 100%;
     transition: 0.4s all ease-in-out;
+}
+
+.read-more-main {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
 }
 
 .read-more-img:hover {
