--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ ul {
 
 
 body{
-    background-color: #000;
+    background-color: #000000e7;
 }
 
 .main-scroll{
@@ -1090,6 +1090,10 @@ h2.page-heading {
     padding: 150px 40px;
 }
 
+.email-detail p a:hover {
+    color: #fff;
+}
+
 .contact-form-inner {
     width: 90%;
     max-width: 600px;
@@ -1328,7 +1332,18 @@ p.zeuzie-footer {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    height: 100%;
+    transition: 0.4s all ease-in-out;
+}
+
+.home-blog-img {
+    width: 100%;
     height: 300px;
+    overflow: hidden;
+}
+
+.blog-post-image:hover{
+    transform: scale(1.2);
 }
 
 .home-blogpost-heading h2 {
