--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,7 @@ Keyframe Animations
     font-size: 22px;
     margin-bottom: 0;
     font-weight: 600;
+    padding-top: 20px;
 }
 
 .after-banner-text p {
@@ -855,6 +856,11 @@ h2.page-heading {
     transform: translate(-50%, -50%);
 }
 
+.banner_box h1 {
+    font-size: 40px;
+    font-weight: 700;
+}
+
 /* banner css end */
 
 
@@ -1259,7 +1265,7 @@ p.zeuzie-footer {
     font-size: 1rem;
     color: #000;
     line-height: 27px;
-    padding: 23px 120px 23px 120px;
+    padding: 23px 105px 23px 105px;
     text-align: center;
     background: #e1bd85;
     border-radius: 30px;
@@ -1458,4 +1464,17 @@ button.close-text-button {
 
 .blogpost-content ul {
     padding-left: 20px;
+}
+
+.zuezie-card ul li {
+    padding-left: 20px;
+    position: relative;
+}
+
+.zuezie-card ul li::before {
+    position: absolute;
+    content: ".";
+    top: -18px;
+    left: -1px;
+    font-size: 60px;
 }
