--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -294,4 +294,12 @@
     .hero-text {
         margin: 60px 0;
     }
+
+    .what-be-do-heading h2 {
+        font-size: 30px;
+    }
+    .personal-page-content h2 {
+        font-size: 26px;
+        line-height: 32px;
+    }
 }
