--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,6 @@ p.first-text {
     padding: 15px;
     border-radius: 10px;
     transition: 0.4s all ease-in-out;
-    box-shadow: rgb(240 237 237 / 51%) 0px 5px 15px;
     border: 2px solid #FFEB3B;
 }
 
@@ -981,6 +980,10 @@ h2.page-heading {
     transition: box-shadow 0.3s ease;
   }
 
+  .card:hover {
+    background-color: #e1bd85;
+}
+
   .card-body svg {
     width: 50px;
     height: 50px;
@@ -1097,6 +1100,12 @@ h2.page-heading {
 
 .contact-form {
     background-color: #e1bd85;
+}
+
+.email-detail h5 {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 600;
 }
 
 .email-detail {
