--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,28 @@ Keyframe Animations
     padding: 20px 10px;
 }
 
+
+/* --------------------- */
+.card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+    border-radius: 30px 0;
+}
+.card {
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.card svg {
+    fill: #555;
+    transition: fill 0.3s ease;
+}
+
+.card:hover svg {
+    fill: #fff; /* Change to your theme color */
+}
+
+
 /* after banner css end */
 
 
